cmake_minimum_required(VERSION 3.14)
project(assignment-5)

set(CMAKE_CXX_STANDARD 14)

add_executable(assignment-5
        ProducerConsumer.cpp
        ProducerConsumer.hpp
        ProducerConsumerDriver.cpp
        #RPNCalculator.hpp
        #RPNCalculatorDriver.cpp
        #RPNCalculator.cpp
        ../assignment-8/Graph.cpp)